Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85366

QTreeView: FetchMore is not getting called for all the entries

    XMLWordPrintable

Details

    • e74af68654c0eb127277c73e20bda409b83d157b (qt/qtbase/dev) fac6b14fc713a16854ce21c5caaa2726af492e05 (qt/qtbase/5.15)

    Description

      When a Treeview is specified to fetch more rows to populate model incrementally, it is not working properly when treeview is opened in the maximized mode so that all entries should be populated.
      Please refer to the attached sample, when the item is expanded, it is expected to load all the entries as there is no scroll bar. but it loads only some entries.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            shmittal Shveta Mittal (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes